--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,22 @@
 $color-h1: #1B1BB3;
 $color-body: #033E6B;
 $color-body2: #66A3D2;
+$purple: #330570;
+
+.dm-sans-bold-heading {
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 36px;
+    color: #1B1BB3;
+}
+
+header {
+    hr {
+        border-top: 3px solid $purple; /* Цвет и толщина линии */
+        opacity: 100%;
+    }
+}
 
 .navbar-brand {
     color: $color-h1 !important;
@@ -14,13 +30,11 @@ $color-body2: #66A3D2;
     }
 }
 
+.my-5 {
+    margin-top: 5rem !important;
+}
 img {
     border-radius: 5%;
-}
-
-h1 {
-    font-size: 36px;
-    color: #1B1BB3;
 }
 
 p {
@@ -28,6 +42,63 @@ p {
     font-size: 18px;
 }
 
+.card {
+    border-radius: 5%;
+    transition: transform 0.2s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.03); /* Применяем масштабирование к .card */
+    cursor: pointer;
+}
+
+.card-link {
+    text-decoration: none;
+    display: block;
+    /* Убрали transition и transform из card-link */
+}
+  
 .card-title {
     color: $color-body;
+}
+
+.button {
+    height: 60px;
+    background-color: $color-body2;
+    border: none;
+    border-radius: 25px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-flex;
+    vertical-align: middle;
+    align-items: center; /* Выравнивание по вертикали */
+    font-size: 18px;
+    cursor: pointer;
+    margin-right: 30px;
+    font-family: 'DM Sans', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+
+    .material-symbols-outlined {
+        margin-right: 15px; /* Отступ между стрелкой и текстом */
+        margin-left: -10px;
+        color: $color-h1;
+        width: 30px;
+        font-size: 40px;
+    }
+}
+
+.button-details {
+    background-color: #ffffff;
+    color: $color-body;
+    border: 1px solid $color-body;
+    font-weight: 300;
+    svg {
+        margin-right: 5px; /* Отступ между иконкой и текстом */
+        vertical-align: middle; /* Вертикальное выравнивание */
+        color: $color-h1;
+    }
 }
