--- a/css/style_test.css
+++ b/css/style_test.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+a {
+  color: inherit; /* Наследует цвет текста родительского элемента */
+  text-decoration: none; /* Убирает подчеркивание */
+}
+
 .dm-sans-bold-heading {
   font-optical-sizing: auto;
   font-weight: 700;
@@ -27,10 +32,6 @@ header hr {
 
 .my-5 {
   margin-top: 5rem !important;
-}
-
-img {
-  border-radius: 5%;
 }
 
 p {
@@ -98,7 +99,7 @@ p {
   color: #1B1BB3;
 }
 
-/* Start doing 2nn page (themes) */
+/* Start doing 2nd page (themes) */
 .wrap {
   display: flex;
   flex-direction: column; /* Элементы будут расположены вертикально */
@@ -116,4 +117,74 @@ p {
   padding-right: 5px;
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*Test page*/
+.container-test {
+  background-color: #EBEEF0;
+  margin-top: 50px;
+  padding: 50px;
+}
+
+.question {
+  font-weight: bold;
+  font-size: 25px;
+  color: #1B1BB3;
+  margin-bottom: 10px;
+}
+
+.options {
+  font-weight: bold;
+  font-size: 20px;
+  color: #033E6B;
+  margin-bottom: 20px;
+}
+
+.option {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #428bca;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  margin-right: 10px;
+}
+
+.button:hover {
+  background-color: #3071a9;
+}
+
+.result {
+  text-align: center;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.hide {
+  display: none;
+}
+
+.quiz-image {
+  max-width: 100%; /* Чтобы изображение не выходило за границы контейнера */
+  height: auto;
+  margin-bottom: 10px; /* Отступ снизу */
+  display: block; /* Чтобы изображение занимало всю ширину */
+  margin: 0 auto; /* Центрирование по горизонтали */
+  padding-bottom: 30px;
+}
+
+.question-container {
+  padding-bottom: 20px;
+}
+
+.question-header {
+  font-weight: bold;
+  font-size: 30px;
+  color: #1B1BB3;
+}
