--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,16 @@ p {
 .topics li {
   line-height: 3.5;
   font-size: 18px;
+  background-color: #66A3D2;
+  border-radius: 40px;
+  margin-bottom: 20px;
+  width: 1000px;
 }
 .topics li svg {
-  padding-right: 5px;
+  margin-right: 25px;
+  margin-left: 20px;
+  margin-bottom: 5px;
+}
+.topics li svg path {
+  fill: white;
 }
