--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,8 @@ p {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .button .material-symbols-outlined {
   margin-right: 15px; /* Отступ между стрелкой и текстом */
@@ -127,19 +129,29 @@ p {
   margin-top: 20px; /* Или используйте margin для отступов между элементами*/
   margin-bottom: 20px;
 }
-.topics li {
+.topics .topic {
   line-height: 3.5;
   font-size: 18px;
   background-color: #66A3D2;
   border-radius: 40px;
   margin-bottom: 20px;
-  width: 1000px;
+  position: relative; /* Необходимо для корректного позиционирования псевдоэлемента */
+  -webkit-transition: width 0.3s ease;
+  transition: width 0.3s ease; /* Плавный переход */
+  display: block; /*  Или block, в зависимости от ваших нужд */
 }
-.topics li svg {
+.topics .topic svg {
   margin-right: 25px;
   margin-left: 20px;
   margin-bottom: 5px;
 }
-.topics li svg path {
+.topics .topic svg path {
   fill: white;
+}
+
+@media (max-width: 1200px) {
+  .topic {
+    -moz-text-align-last: center !important;
+         text-align-last: center !important;
+  }
 }
