--- a/css/style_test.css
+++ b/css/style_test.css
@@ -262,3 +262,30 @@ p {
   display: block;
   margin: 0 auto; /* Центрирование изображения */
 }
+
+.additional-tickets {
+  margin-top: 10px; /* Добавление отступа сверху для разделения */
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.additional-ticket {
+  /* Стиль для дополнительных квадратиков */
+  margin-right: 5px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 5px;
+  cursor: default; /* Убираем курсор руки, так как они не кликабельны */
+}
+
+.additional-ticket.correct {
+  background-color: #66D28F;
+}
+
+.additional-ticket.incorrect {
+  background-color: #D95B5B;
+}
