--- a/css/style_test.css
+++ b/css/style_test.css
@@ -289,3 +289,19 @@ p {
 .additional-ticket.incorrect {
   background-color: #D95B5B;
 }
+
+.test-success {
+  display: inline-flex; /* Или display: flex; если хотите больше контроля */
+  align-items: center; /* Выравнивает элементы по вертикали */
+}
+.test-success svg {
+  margin-left: 10px;
+}
+
+.test-incorrect {
+  display: inline-flex; /* Или display: flex; если хотите больше контроля */
+  align-items: center; /* Выравнивает элементы по вертикали */
+}
+.test-incorrect svg {
+  margin-left: 10px;
+}
