--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,17 @@
 a {
   color: inherit; /* Наследует цвет текста родительского элемента */
   text-decoration: none; /* Убирает подчеркивание */
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 30px;
+  padding-top: 25px;
+}
+
+h3 {
+  font-size: 25px;
+  padding-top: 15px;
 }
 
 .dm-sans-bold-heading {
@@ -25,9 +36,24 @@ header hr {
 .nav-link {
   color: #1B1BB3 !important;
   font-size: 18px;
+  font-weight: 500;
 }
 .nav-link .active {
   color: #1B1BB3 !important;
+}
+
+.nav-item {
+  padding-right: 20px;
+}
+
+.navbar-nav .nav-item .nav-link.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px; /* Толщина полоски */
+  background-color: #330570; /* Цвет полоски */
+  margin-top: 5px; /* Отступ сверху */
+  border-radius: 5px; /* Добавлено для закругления */
 }
 
 .my-5 {
@@ -41,6 +67,7 @@ img {
 p {
   color: #033E6B;
   font-size: 18px;
+  font-weight: 500;
 }
 
 .card {
@@ -88,7 +115,7 @@ p {
   margin-right: 30px;
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 700;
+  font-weight: 600;
   font-style: normal;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -105,7 +132,6 @@ p {
   background-color: #ffffff;
   color: #033E6B;
   border: 1px solid #033E6B;
-  font-weight: 300;
 }
 .button-details svg {
   margin-right: 5px; /* Отступ между иконкой и текстом */
@@ -162,4 +188,31 @@ p {
     -moz-text-align-last: center !important;
          text-align-last: center !important;
   }
+}
+.special_word {
+  color: #330570;
+}
+
+.about {
+  color: #66A3D2;
+  font-size: 18px;
+}
+
+.max-width-img {
+  max-width: 55%; /* Или другое значение в процентах от ширины родительского контейнера */
+  padding-top: 20px;
+}
+
+.chose_theory {
+  font-size: 18px;
+  color: #330570;
+  padding-top: 10px;
+  line-height: 3;
+}
+
+.col-md-12 h2 {
+  color: #1B1BB3;
+}
+.col-md-12 h3 {
+  color: #330570;
 }
