--- a/css/style_test.css
+++ b/css/style_test.css
@@ -144,6 +144,7 @@ p {
   display: flex;
   justify-content: center;
   margin-bottom: 20px; /* Настраиваемый отступ снизу */
+  flex-wrap: wrap; /* Ключевое свойство для переноса на новую строку */
 }
 
 .ticket-square {
@@ -158,6 +159,7 @@ p {
   color: #330570;
   border-radius: 5px;
   font-weight: 500;
+  margin: 5px;
 }
 
 .timer_n_ticket {
@@ -247,4 +249,8 @@ p {
 }
 .test-incorrect svg {
   margin-left: 10px;
+}
+
+#retry {
+  margin-bottom: 20px;
 }
