--- a/css/styles.scss
+++ b/css/styles.scss
@@ -55,10 +55,10 @@ header {
     content: "";
     display: block;
     width: 100%;
-    height: 3px; /* Толщина полоски */
-    background-color: $purple; /* Цвет полоски */
-    margin-top: 5px; /* Отступ сверху */
-    border-radius: 5px; /* Добавлено для закругления */
+    height: 3px;
+    background-color: $purple;
+    margin-top: 5px;
+    border-radius: 5px;
 }
 
 .my-5 {
@@ -80,7 +80,7 @@ p {
 }
 
 .card:hover {
-    transform: scale(1.03); /* Применяем масштабирование к .card */
+    transform: scale(1.03);
     cursor: pointer;
 }
 
